# cloud-etl-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  PROJECT_COMPLETE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  create_redshift_tables.py  create_redshift_tables.sql  examples.py  generate_sample_data.py  local_test.py  my_pipeline.py  pyproject.toml  setup_iam_role.py  verify_setup.sh
config/: config.yml
dzun-local/: Cloud ETL - Build a pipeline.md
etl/: __init__.py  pipeline.py
etl/extract/: __init__.py  s3_extractor.py
etl/load/: __init__.py  redshift_loader.py
etl/transform/: __init__.py  transformer.py
etl/utils/: config.py  exceptions.py  logger.py  spark_manager.py
tests/: conftest.py  test_config.py  test_s3_extractor.py
