[tool.poetry]
name = "cloud-etl-pipeline"
version = "0.1.0"
description = "Cloud ETL Pipeline with AWS S3, PySpark, and Data Warehouse Integration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "etl"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
boto3 = "^1.34.0"
botocore = "^1.34.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pandas = "^2.1.0"
pyarrow = "^14.0.0"
psycopg2-binary = "^2.9.9"
numpy = "^1.24.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
ipython = "^8.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=etl --cov-report=term-missing"
